# BE

./: CMakeLists.txt  Encrypt.cpp  KeyGen.cpp  Setup.cpp  be.cpp  be.h  collaborative_decrypt.cpp  config.h  ecc.cpp  ecc.h  lss.cpp  lss.h  main.cpp  partial_decrypt.cpp  types.h  util.cpp  util.h
Le-BE-Scheme/: CMakeLists.txt  decrypt.cpp  encrypt.cpp  hash.cpp  hash.h  keygen.cpp  main.cpp  mtbe.h  params.h  polynomial.cpp  polynomial.h  recover.cpp  setup.cpp  utils.cpp
